// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test <Button /> component Button render with text 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  type="button"
>
  <p
    className="text undefined"
  >
    Добавить
  </p>
</button>
`;

exports[`Test <Button /> component Button render without text 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  type="button"
>
  <p
    className="text undefined"
  />
</button>
`;

exports[`Test <Button /> component Button with loading 1`] = `
<button
  className="text text_type_button text_color_primary button undefined loader "
  disabled={true}
  type="button"
>
  <img
    alt="Загрузка."
    className="loader_icon"
    id="string-spinner"
    src="loader.svg"
  />
</button>
`;

exports[`Test <Button /> component when Button disabled 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  disabled={true}
  type="button"
>
  <p
    className="text undefined"
  />
</button>
`;
